# front_end_self_fkgkdfgy

./: CMakeLists.txt  process.md
app/: main.cpp
config/: EuRoC.yaml  all_path.yaml  tracker.yaml
core/include/: camera_model.hpp  data_loader.hpp  displayer.hpp  frame.hpp  front_end_self.hpp  tracker_interface.hpp
core/include/tracker_module/: opencv_LK_tracker.hpp  tracker_interface.hpp
core/src/: data_loader.cpp  front_end_self.cpp
